UPDT: Fixed carausel spacing. Added polaroid-like photo

--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,19 @@
 * {
   margin: auto;
   font-family: Jockey One;
+  cursor: default;
+}
+
+/* Evita selección de texto */
+body {
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* IE/Edge antiguos */
+}
+
+/* Evita arrastrar imágenes */
+img {
+  pointer-events: none;
+  -webkit-user-drag: none;
 }
